--- a/src/Sidebar/sidebar.css
+++ b/src/Sidebar/sidebar.css
@@ -1,3 +1,11 @@
-.flex{
-    
+.flex {
+  display: flex;
+}
+
+.flex-item {
+  width: 100px;
+  height: 50px;
+  color: white;
+  margin: 10px;
+  cursor: pointer;
 }
