--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@ th,
 td {
   border-bottom: 1px solid #5e5f63 !important;
 }
+fieldset {
+  border-color: white !important;
+}
+
+.css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input {
+  color: white !important;
+}
